# Polygons_mipt_sem3

./: CMakeLists.txt  main.cpp
src/Dot/: Dot.cpp  Dot.h  TDot.cpp  TDot.h
src/Polygon/: Polygon.cpp  Polygon.h
src/Polygon/Quadrilateral/: Parallelogram.cpp  Parallelogram.h  Quadrilateral.cpp  Quadrilateral.h  Square.cpp  Square.h  Trapezoid.cpp  Trapezoid.h  rhomb.cpp  rhomb.h
src/Polygon/RegularPoly/: RegularPoly.cpp  RegularPoly.h
src/Polygon/Segment/: Segment.cpp  Segment.h
src/Polygon/Triangle/: Triangle.cpp  Triangle.h
src/Polygon/Triangle/Rect_triangle/: Rect_triangle.cpp  Rect_triangle.h
